--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,3 @@
-site_name: Flask Endless Task List Application with Levels and XP
+site_name: Flask Endless Task List Application with Levels and Experience Points (XP)
 theme: material
 repo_url: https://github.com/lulunac27a/flask-endless-task-list-app
